@@ -41,6 +41,9 @@ Changes in beta release 2.5.22 (not released yet)
    - Fixes for resizing shaded windows and windows with a gravity
      other than northwest.
    - Fixed CursorStyle POSITION, broken since 2.3.24.
+   - The hi, sh and fgsh colors in colorsets are no longer replaced
+     by computed values if not explicit set on the same line as the
+     bg, or for fgsh fg, changes. (bug #3359)
 
 -------------------------------------------------------------------
 
