@@ -1,3 +1,10 @@
+2007-02-07  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>
+
+	* NEWS:
+	* fvwm/colorset.c (parse_colorset):
+	don't recompute sh, hi and fgsh if they were supplied in a previous
+	colorset line. Fixes bug #3359.
+
 2007-02-06  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* fvwm/move_resize.c (DoSnapAttract):
